# api-private/gen/models/friend_info_list.go
@@ -12,6 +12,7 @@ import (
 
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
 )
 
 // FriendInfoList friend info list
@@ -19,10 +20,12 @@ import (
 type FriendInfoList struct {
 
 	// items
+	// Required: true
 	Items []*FriendInfo `json:"items"`
 
 	// next page token
-	NextPageToken string `json:"nextPageToken,omitempty"`
+	// Required: true
+	NextPageToken *string `json:"nextPageToken"`
 }
 
 // Validate validates this friend info list
@@ -30,6 +33,11 @@ func (m *FriendInfoList) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	if err := m.validateItems(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateNextPageToken(formats); err != nil {
 		// prop
 		res = append(res, err)
 	}
@@ -42,8 +50,8 @@ func (m *FriendInfoList) Validate(formats strfmt.Registry) error {
 
 func (m *FriendInfoList) validateItems(formats strfmt.Registry) error {
 
-	if swag.IsZero(m.Items) { // not required
-		return nil
+	if err := validate.Required("items", "body", m.Items); err != nil {
+		return err
 	}
 
 	for i := 0; i < len(m.Items); i++ {
@@ -63,6 +71,15 @@ func (m *FriendInfoList) validateItems(formats strfmt.Registry) error {
 
 		}
 
+	}
+
+	return nil
+}
+
+func (m *FriendInfoList) validateNextPageToken(formats strfmt.Registry) error {
+
+	if err := validate.Required("nextPageToken", "body", m.NextPageToken); err != nil {
+		return err
 	}
 
 	return nil
